# kousei

./: .env.example  .gitignore  Dockerfile.python  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260322_0001_initial.py
apps/api/app/: dependencies.py  main.py
apps/api/app/routes/: demo.py  devices.py  diffs.py  events.py  overview.py
apps/ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/ui/src/: App.tsx  api.ts  demoData.ts  demoDataStore.tsx  download.ts  index.css  main.tsx  types.ts
apps/ui/src/components/: ConfigViewer.tsx  InlineDiffViewer.tsx  MiniCalendar.tsx  Panel.tsx  StatCard.tsx  TimelineSidebar.tsx
apps/ui/src/pages/: DeviceDetailPage.tsx  DevicesPage.tsx  DiffPage.tsx  EventsPage.tsx  OverviewPage.tsx
fixtures/: nxos_001.cfg  nxos_002.cfg  nxos_003.cfg
libs/attribution/: __init__.py  engine.py
libs/collectors/: __init__.py  factory.py  scrapli_client.py
libs/diffing/: __init__.py  engine.py
libs/models/: __init__.py  database.py  logging.py  network.py  pipeline.py  schemas.py  security.py  service.py  settings.py  storage.py
libs/normalizers/: __init__.py  configs.py
